--- a/index.html
+++ b/index.html
@@ -17,6 +17,116 @@
         <a href="admissions/enroll.html" class="btn">Enroll Now</a>
     </section>
 
+    <section class="about-us">
+        <div class="container">
+            <h2 class="section-title">About Us</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Bangladesh School Bahrain (BSB) has been a cornerstone of the Bangladeshi community in Bahrain since its establishment in 1983. Our mission is to provide high-quality education rooted in Bangladeshi values and culture, while preparing students for global challenges.</p>
+                    <p>We believe in fostering a holistic learning environment that encourages academic excellence, moral development, and community engagement. Our vision is to be a leading educational institution that empowers students to become responsible citizens and future leaders, contributing positively to both Bahrain and Bangladesh.</p>
+                    <a href="about-us.html" class="btn btn-primary">Learn More</a>
+                </div>
+                <div class="about-image">
+                    <img src="about-us.jpg" alt="Bangladesh School Bahrain Campus">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="academics">
+        <div class="container">
+            <h2 class="section-title">Our Academics</h2>
+            <p class="section-description">At Bangladesh School Bahrain, we are dedicated to providing a comprehensive and challenging educational experience. We offer two distinct curricula to cater to diverse learning needs and future aspirations, ensuring that every student receives a world-class education.</p>
+            <div class="curriculum-cards">
+                <div class="curriculum-card">
+                    <i class="fas fa-book-reader"></i>
+                    <h3>National Curriculum of Bangladesh</h3>
+                    <p>Our primary curriculum follows the guidelines of the National Curriculum and Textbook Board (NCTB) of Bangladesh. This curriculum emphasizes Bangladeshi culture, history, and values, preparing students for the SSC and HSC examinations. It ensures a strong foundation in Bengali language, literature, and national identity while meeting international academic standards.</p>
+                    <a href="academics/curriculum-bd.html" class="btn btn-small">Explore BD Curriculum</a>
+                </div>
+                <div class="curriculum-card">
+                    <i class="fas fa-globe"></i>
+                    <h3>Cambridge International Curriculum</h3>
+                    <p>For students seeking an internationally recognized qualification, we offer the Cambridge International Curriculum. This program is designed to develop critical thinking, problem-solving skills, and independent learning. Students are prepared for Cambridge IGCSE and A-Level examinations, providing pathways to leading universities worldwide.</p>
+                    <a href="academics/curriculum-cambridge.html" class="btn btn-small">Explore Cambridge Curriculum</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="admissions">
+        <div class="container">
+            <h2 class="section-title">Admissions</h2>
+            <p class="section-description">Embark on your child's educational journey with Bangladesh School Bahrain. Our admission process is designed to be straightforward and supportive, ensuring a smooth transition for new students and their families.</p>
+            <div class="admissions-info">
+                <div class="info-item">
+                    <i class="fas fa-clipboard-list"></i>
+                    <h4>Process Overview</h4>
+                    <p>Understand the step-by-step procedure for applying to BSB, from inquiry to enrollment. We guide you through each stage, making the process transparent and easy to follow.</p>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-file-alt"></i>
+                    <h4>Key Requirements</h4>
+                    <p>Find out the necessary documents and eligibility criteria for admission across different grade levels. Ensure you have all the essential information ready for your application.</p>
+                </div>
+                <div class="info-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <h4>Important Dates</h4>
+                    <p>Stay informed about application deadlines, entrance exam schedules, and interview dates to plan your admission journey effectively.</p>
+                </div>
+            </div>
+            <br>
+            <a href="admissions/process.html" class="btn">View Admission Details</a>
+        </div>
+    </section>
+
+    <section class="facilities">
+        <div class="container">
+            <h2 class="section-title">Our Facilities</h2>
+            <p class="section-description">Bangladesh School Bahrain offers a range of modern facilities designed to create an optimal learning and development environment for all students.</p>
+            <div class="facility-grid">
+                <div class="facility-item">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <h3>Modern Classrooms</h3>
+                    <p>Spacious, well-lit classrooms equipped with interactive whiteboards and technology to enhance learning.</p>
+                </div>
+                <div class="facility-item">
+                    <i class="fas fa-flask"></i>
+                    <h3>Science Labs</h3>
+                    <p>Fully equipped laboratories for Physics, Chemistry, and Biology, providing hands-on experimental learning.</p>
+                </div>
+                <div class="facility-item">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>Computer Labs</h3>
+                    <p>State-of-the-art computer labs with high-speed internet access for digital literacy and coding skills.</p>
+                </div>
+                <div class="facility-item">
+                    <i class="fas fa-book"></i>
+                    <h3>Library</h3>
+                    <p>A vast collection of books, journals, and digital resources to support research and reading habits.</p>
+                </div>
+                <div class="facility-item">
+                    <i class="fas fa-futbol"></i>
+                    <h3>Sports Grounds</h3>
+                    <p>Extensive outdoor and indoor sports facilities for various athletic activities and physical development.</p>
+                </div>
+                <div class="facility-item">
+                    <i class="fas fa-utensils"></i>
+                    <h3>Cafeteria</h3>
+                    <p>A hygienic cafeteria offering nutritious meals and snacks for students and staff.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="hiring-section">
+        <div class="container">
+            <h2 class="section-title">Join Our Team</h2>
+            <p class="section-description">Are you passionate about education and looking to make a difference? Explore career opportunities at Bangladesh School Bahrain and become a part of our dedicated faculty and staff.</p>
+            <a href="careers.html" class="btn">View Open Positions</a>
+        </div>
+    </section>
+
     <div id="footer-placeholder"></div>
 
     <script src="script.js"></script>
