--- a/footer.html
+++ b/footer.html
@@ -6,18 +6,18 @@
             <p>Block 356</p>
             <p>Building 68</p>
             <p>Salihiya, Bahrain</p>
-            <p><a href="tel:+97312345678"><i class="fas fa-phone"></i> +973 1234 5678</a></p>
+            <p><a href="tel:+973 1725 7745"><i class="fas fa-phone"></i> +973 1725 7745</a></p>
             <p><a href="mailto:info@bangschoolbh.com"><i class="fas fa-envelope"></i> info@bdschoolbh.com</a></p>
         </div>
         
         <div class="footer-section useful-links">
             <h3>Useful Links</h3>
             <ul>
-                <li><a href="contact-us.html">Enquire Now</a></li>
-                <li><a href="admissions/process.html">Admissions Process</a></li>
-                <li><a href="careers.html">Careers</a></li>
-                <li><a href="academics/academic-calendar.html">Academic Calendar</a></li>
-                <li><a href="news-events.html">News & Events</a></li>
+                <li><a href="/contact-us.html">Enquire Now</a></li>
+                <li><a href="/admissions/process.html">Admissions Process</a></li>
+                <li><a href="/careers.html">Careers</a></li>
+                <li><a href="/academics/academic-calendar.html">Academic Calendar</a></li>
+                <li><a href="/news-events.html">News & Events</a></li>
             </ul>
         </div>
         
