--- a/header.html
+++ b/header.html
@@ -9,30 +9,30 @@
             <li>
                 <a href="#" class="nav-dropdown-toggle">ACADEMICS <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="academics/syllabus.html">Syllabus</a></li>
-                    <li><a href="academics/curriculum.html">Curriculum</a></li>
-                    <li><a href="academics/academic-calendar.html">Academic Calender</a></li>
+                    <li><a href="/academics/syllabus.html">Syllabus</a></li>
+                    <li><a href="/academics/curriculum.html">Curriculum</a></li>
+                    <li><a href="/academics/academic-calendar.html">Academic Calender</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#" class="nav-dropdown-toggle">SCHOOL OPERATIONS <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="operations/rules.html">Rules and regulations</a></li>
-                    <li><a href="operations/timing.html">Timing</a></li>
-                    <li><a href="operations/fees.html">Fees</a></li>
-                    <li><a href="operations/uniform.html">Uniform</a></li>
+                    <li><a href="/operations/rules.html">Rules and regulations</a></li>
+                    <li><a href="/operations/timing.html">Timing</a></li>
+                    <li><a href="/operations/fees.html">Fees</a></li>
+                    <li><a href="/operations/uniform.html">Uniform</a></li>
                 </ul>
             </li>
-            <li><a href="campus.html">CAMPUS</a></li>
-            <li><a href="faculty.html">FACULTY</a></li>
+            <li><a href="/campus.html">CAMPUS</a></li>
+            <li><a href="/faculty.html">FACULTY</a></li>
             <li>
                 <a href="#" class="nav-dropdown-toggle">ADMISSIONS <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="admissions/process.html">Admission Process</a></li>
-                    <li><a href="admissions/requirements.html">Requirements</a></li>
+                    <li><a href="/admissions/process.html">Admission Process</a></li>
+                    <li><a href="/admissions/requirements.html">Requirements</a></li>
                 </ul>
             </li>
-            <li><a href="portals.html">PORTALS</a></li>
+            <li><a href="/portals.html">PORTALS</a></li>
         </ul>
     </nav>
     <div class="hamburger-menu" id="hamburgerMenu">
@@ -49,29 +49,29 @@
         <li>
             <a href="#" class="mobile-nav-link" data-target="academics-submenu">ACADEMICS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu" id="academics-submenu">
-                <li><a href="academics/syllabus.html">Syllabus</a></li>
-                <li><a href="academics/curriculum.html">Curriculum</a></li>
-                <li><a href="academics/academic-calendar.html">Academic Calender</a></li>
+                <li><a href="/academics/syllabus.html">Syllabus</a></li>
+                <li><a href="/academics/curriculum.html">Curriculum</a></li>
+                <li><a href="/academics/academic-calendar.html">Academic Calender</a></li>
             </ul>
         </li>
         <li>
             <a href="#" class="mobile-nav-link" data-target="operations-submenu">SCHOOL OPERATIONS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu" id="operations-submenu">
-                <li><a href="operations/rules.html">Rules and regulations</a></li>
-                <li><a href="operations/timing.html">Timing</a></li>
-                <li><a href="operations/fees.html">Fees</a></li>
-                <li><a href="operations/uniform.html">Uniform</a></li>
+                <li><a href="/operations/rules.html">Rules and regulations</a></li>
+                <li><a href="/operations/timing.html">Timing</a></li>
+                <li><a href="/operations/fees.html">Fees</a></li>
+                <li><a href="/operations/uniform.html">Uniform</a></li>
             </ul>
         </li>
-        <li><a href="campus.html" class="mobile-nav-link" data-target="">CAMPUS</a></li>
-        <li><a href="faculty.html" class="mobile-nav-link" data-target="">FACULTY</a></li>
+        <li><a href="/campus.html" class="mobile-nav-link" data-target="">CAMPUS</a></li>
+        <li><a href="/faculty.html" class="mobile-nav-link" data-target="">FACULTY</a></li>
         <li>
             <a href="#" class="mobile-nav-link" data-target="admissions-submenu">ADMISSIONS <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu" id="admissions-submenu">
-                <li><a href="admissions/process.html">Admission Process</a></li>
-                <li><a href="admissions/requirements.html">Requirements</a></li>
+                <li><a href="/admissions/process.html">Admission Process</a></li>
+                <li><a href="/admissions/requirements.html">Requirements</a></li>
             </ul>
         </li>
-        <li><a href="portals.html" class="mobile-nav-link" data-target="">PORTALS</a></li>
+        <li><a href="/portals.html" class="mobile-nav-link" data-target="">PORTALS</a></li>
     </ul>
 </div>
